Pygments changelog
==================

Version 0.7 (in development)
----------------------------
(codename to be selected, released Feb XX, 2007)

- Made the HTML formatter more flexible, and easily subclassable in order
  to make it easy to implement custom wrappers, e.g. alternate line
  number markup.  

- Added an `outencoding` option to all formatters, making it possible
  to override the `encoding` (which is used by lexers and formatters) when
  using the command line interface. Also, if using the terminal formatter
  and the output file is a terminal and has an encoding attribute, use it
  if no encoding is given.

- Made it possible to just drop style modules into the `styles` subpackage
  of the Pygments installation.

- Added a "state" keyword argument to the `using` helper.

- Added a `commandprefix` option to the `LatexFormatter` which allows to
  control how the command names are constructed.

- Added quite a few new lexers, thanks to Tim Hatch:

  * Java Server Pages
  * Windows batch files
  * Trac Wiki markup
  * Python tracebacks
  * ReStructuredText
  * Dylan
  * and the Befunge esoteric programming language (yay!)

- Added Mako lexers by Ben Bangert.

- Added "fruity" style, another dark background originally vim-based theme.

- Added sources.list lexer by Dennis Kaarsemaker.

- Added token stream filters.

- Changed behavior of `in` Operator for tokens. 

- Added mimetypes for all lexers.

- Fixed some problems lexing Python strings.

- Fixed tickets: #167, #178, #179, #180, #185.


Version 0.6
-----------
(codename Zimtstern, released Dec 20, 2006)

- Added option for the HTML formatter to write the CSS to an external file
  in "full document" mode.

- Added RTF formatter.

- Added Bash and Apache configuration lexers (thanks to Tim Hatch).

- Improved guessing methods for various lexers.

- Added `@media` support to CSS lexer (thanks to Tim Hatch).

- Added a Groff lexer (thanks to Tim Hatch).

- License change to BSD.
